--- a/2023.html
+++ b/2023.html
@@ -29,10 +29,10 @@
                     <a href="/">2024</a>
                 </li>
                 <li>
-                    <a class="ativo" href="/2023.html">2023</a>
+                    <a class="ativo" href="/cursos-dos-idosos/2023.html">2023</a>
                 </li>
                 <li>
-                    <a href="/2022.html">2022</a>
+                    <a href="/curso-dos-idosos/2022.html">2022</a>
                 </li>
             </ul>
         </nav>
