--- a/2022.html
+++ b/2022.html
@@ -26,7 +26,7 @@
         <nav id="anos">
             <ul>
                 <li>
-                    <a href="/">2024</a>
+                    <a href="/curso-dos-idosos/">2024</a>
                 </li>
                 <li>
                     <a href="/curso-dos-idosos/2023.html">2023</a>
