--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav id="anos">
             <ul>
                 <li>
-                    <a class="ativo" href="/">2024</a>
+                    <a class="ativo" href="/curso-dos-idosos/">2024</a>
                 </li>
                 <li>
                     <a href="/curso-dos-idosos/2023.html">2023</a>
