--- a/2023.html
+++ b/2023.html
@@ -9,16 +9,31 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Kufam:ital,wght@0,400..900;1,400..900&display=swap');
     </style>
+     <script src="js/menu.js" defer></script>
 </head>
 
 <body>
     <header>
+        <a href="/index.html">
             <img id="logo" src="imgs/Group 2.svg" alt="">
-        
+        </a>
+
         <div id="menu">
             <div></div>
             <div></div>
             <div></div>
+        </div>
+        <div id="menulateral">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Home">Home</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Materiais</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -26,13 +41,13 @@
         <nav id="anos">
             <ul>
                 <li>
-                    <a href="/curso-dos-idosos/">2024</a>
+                    <a href="/">2024</a>
                 </li>
                 <li>
-                    <a class="ativo" href="/cursos-dos-idosos/2023.html">2023</a>
+                    <a class="ativo" href="/2023.html">2023</a>
                 </li>
                 <li>
-                    <a href="/curso-dos-idosos/2022.html">2022</a>
+                    <a href="/2022.html">2022</a>
                 </li>
             </ul>
         </nav>
