--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="/index.html">
+        <a href="/curso-dos-idosos/index.html">
             <img id="logo" src="imgs/Group 2.svg" alt="">
         </a>
 
@@ -30,7 +30,7 @@
                         <a href="Home">Home</a>
                     </li>
                     <li>
-                        <a href="index.html">Materiais</a>
+                        <a href="/curso-dos-idosos/index.html">Materiais</a>
                     </li>
                 </ul>
             </nav>
@@ -41,13 +41,13 @@
         <nav id="anos">
             <ul>
                 <li>
-                    <a class="ativo" href="/">2024</a>
+                    <a class="ativo" href="/curso-dos-idosos/index.html">2024</a>
                 </li>
                 <li>
-                    <a href="/2023.html">2023</a>
+                    <a href="/curso-dos-idosos/2023.html">2023</a>
                 </li>
                 <li>
-                    <a href="/2022.html">2022</a>
+                    <a href="/curso-dos-idosos/2022.html">2022</a>
                 </li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
         <section class="semestres">
             <h1>1º Semestre</h1>
             <div class="grid">
-                <a href="/material.html">
+                <a href="/curso-dos-idosos/material.html">
                     <div>
                         <img src="imgs/drive.webp" alt="">
                         <div class="cardtext">
