--- a/material.html
+++ b/material.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="/index.html">
+        <a href="/curso-dos-idosos/index.html">
             <img id="logo" src="imgs/Group 2.svg" alt="">
         </a>
 
@@ -30,7 +30,7 @@
                         <a href="Home">Home</a>
                     </li>
                     <li>
-                        <a href="index.html">Materiais</a>
+                        <a href="/curso-dos-idosos/index.html">Materiais</a>
                     </li>
                 </ul>
             </nav>
