--- a/2022.html
+++ b/2022.html
@@ -9,13 +9,12 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Kufam:ital,wght@0,400..900;1,400..900&display=swap');
     </style>
-     <script src="js/menu.js" defer></script>
-
+    <script src="js/menu.js" defer></script>
 </head>
 
 <body>
     <header>
-        <a href="/index.html">
+        <a href="/curso-dos-idosos/index.html">
             <img id="logo" src="imgs/Group 2.svg" alt="">
         </a>
 
@@ -31,7 +30,7 @@
                         <a href="Home">Home</a>
                     </li>
                     <li>
-                        <a href="index.html">Materiais</a>
+                        <a href="/curso-dos-idosos/index.html">Materiais</a>
                     </li>
                 </ul>
             </nav>
@@ -42,13 +41,13 @@
         <nav id="anos">
             <ul>
                 <li>
-                    <a href="/">2024</a>
+                    <a href="/curso-dos-idosos/index.html">2024</a>
                 </li>
                 <li>
-                    <a href="/2023.html">2023</a>
+                    <a href="/curso-dos-idosos/2023.html">2023</a>
                 </li>
                 <li>
-                    <a class="ativo" href="/2022.html">2022</a>
+                    <a class="ativo" href="/curso-dos-idosos/2022.html">2022</a>
                 </li>
             </ul>
         </nav>
@@ -56,7 +55,7 @@
         <section class="semestres">
             <h1>1º Semestre</h1>
             <div class="grid">
-                <a href="#">
+                <a href="/curso-dos-idosos/material.html">
                     <div>
                         <img src="imgs/drive.webp" alt="">
                         <div class="cardtext">
