--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="semestres">
             <h1>1º Semestre</h1>
             <div class="grid">
-                <a href="/curso-dos-idosos/material.html">
+                <a href="/material.html">
                     <div>
                         <img src="imgs/drive.webp" alt="">
                         <div class="cardtext">
