--- a/material.html
+++ b/material.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="/curso-dos-idosos/index.html">
+        <a href="/">
             <img id="logo" src="imgs/Group 2.svg" alt="">
         </a>
 
