--- a/2023.html
+++ b/2023.html
@@ -55,42 +55,60 @@
         <section class="semestres">
             <h1>1º Semestre</h1>
             <div class="grid">
-                <a href="/curso-dos-idosos/material.html">
+                <a href="/curso-dos-idosos/introducao2023.html">
                     <div>
                         <img src="imgs/drive.webp" alt="">
                         <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
+                            <h2>Introdução ao curso</h2>
+                            <p>14 de março de 2023</p>
                         </div>
                     </div>
                 </a>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/meet.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>12 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div>
-                        <img src="imgs/docs.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
+                <a href="/curso-dos-idosos/gmail2023.html">
                     <div>
                         <img src="imgs/gmail.webp" alt="">
                         <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
+                            <h2>Gmail</h2>
+                            <p>21 de março de 2023</p>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="/curso-dos-idosos/docgoogle2023.html">
+                    <div>
+                        <img src="imgs/docs.webp" alt="">
+                        <div class="cardtext">
+                            <h2>Documentos Google</h2>
+                            <p>28 de março de 2023</p>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="/curso-dos-idosos/livrodereceita2023.html">
+                    <div>
+                        <img src="imgs/gmail.webp" alt="">
+                        <div class="cardtext">
+                            <h2>Criando o seu livro de receitas</h2>
+                            <p>11 de abril de 2023</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/curso-dos-idosos/aulafotografia2023.html">
+                    <div>
+                        <img src="imgs/fotografia.webp" alt="">
+                        <div class="cardtext">
+                            <h2>Aula de fotografias</h2>
+                            <p>18 de abril de 2023</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="/curso-dos-idosos/googledrive2023.html">
+                    <div>
+                        <img src="imgs/drive.webp" alt="">
+                        <div class="cardtext">
+                            <h2>Google Drive</h2>
+                            <p>25 de abril de 2023</p>
                         </div>
                     </div>
                 </a>
@@ -132,7 +150,7 @@
 
                 <a href="#">
                     <div>
-                        <img src="imgs/foto4.webp" alt="">
+                        <img src="imgs/drive.webp" alt="">
                         <div class="cardtext">
                             <h2>Título da aula</h2>
                             <p>04 de abril de 2024</p>
