--- a/2023.html
+++ b/2023.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Materiais 2023</title>
     <link rel="stylesheet" href="css/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Kufam:ital,wght@0,400..900;1,400..900&display=swap');
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="/curso-dos-idosos/index.html">
-            <img id="logo" src="imgs/Group 2.svg" alt="">
+            <img id="logo" src="imgs/Group 2.svg" alt="Logo do Instituto Federal">
         </a>
 
         <div id="menu">
@@ -53,11 +53,11 @@
         </nav>
 
         <section class="semestres">
-            <h1>1º Semestre</h1>
+            <h2>1º Semestre</h2>
             <div class="grid">
                 <a href="/curso-dos-idosos/introducao2023.html">
                     <div>
-                        <img src="imgs/drive.webp" alt="">
+                        <img src="imgs/introducao.png" alt="Introdução ao curso">
                         <div class="cardtext">
                             <h2>Introdução ao curso</h2>
                             <p>14 de março de 2023</p>
@@ -67,7 +67,7 @@
 
                 <a href="/curso-dos-idosos/gmail2023.html">
                     <div>
-                        <img src="imgs/gmail.webp" alt="">
+                        <img src="imgs/gmail.webp" alt="Logo e título do Gmail">
                         <div class="cardtext">
                             <h2>Gmail</h2>
                             <p>21 de março de 2023</p>
@@ -77,7 +77,7 @@
 
                 <a href="/curso-dos-idosos/docgoogle2023.html">
                     <div>
-                        <img src="imgs/docs.webp" alt="">
+                        <img src="imgs/docs.webp" alt="Logo e título do Documentos Google">
                         <div class="cardtext">
                             <h2>Documentos Google</h2>
                             <p>28 de março de 2023</p>
@@ -87,7 +87,7 @@
 
                 <a href="/curso-dos-idosos/livrodereceita2023.html">
                     <div>
-                        <img src="imgs/gmail.webp" alt="">
+                        <img src="imgs/receitas.png" alt="Livro de receitas.">
                         <div class="cardtext">
                             <h2>Criando o seu livro de receitas</h2>
                             <p>11 de abril de 2023</p>
@@ -96,7 +96,7 @@
                 </a>
                 <a href="/curso-dos-idosos/aulafotografia2023.html">
                     <div>
-                        <img src="imgs/fotografia.webp" alt="">
+                        <img src="imgs/fotografia.webp" alt="Desenho de uma câmera fotográfica.">
                         <div class="cardtext">
                             <h2>Aula de fotografias</h2>
                             <p>18 de abril de 2023</p>
@@ -105,7 +105,7 @@
                 </a>
                 <a href="/curso-dos-idosos/googledrive2023.html">
                     <div>
-                        <img src="imgs/drive.webp" alt="">
+                        <img src="imgs/drive.webp" alt="Logo e título do Google Drive">
                         <div class="cardtext">
                             <h2>Google Drive</h2>
                             <p>25 de abril de 2023</p>
@@ -116,7 +116,7 @@
         </section>
 
         <section class="semestres">
-            <h1>2º Semestre</h1>
+            <h2>2º Semestre</h2>
             <div class="grid">
                 <a href="#">
                     <div>
