--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Material 2024</title>
     <link rel="stylesheet" href="css/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Kufam:ital,wght@0,400..900;1,400..900&display=swap');
     </style>
+    <script src="js/modoescuro.js" defer></script>
     <script src="js/menu.js" defer></script>
 </head>
 
 <body>
     <header>
         <a href="/curso-dos-idosos/index.html">
-            <img id="logo" src="imgs/Group 2.svg" alt="">
+            <img id="logo" src="imgs/Group 2.svg" alt="Logo do Intituto Federals">
         </a>
 
         <div id="menu">
@@ -38,6 +39,11 @@
     </header>
 
     <main>
+        <label for="input" id="acessibilidade">
+            <input type="checkbox" name="input" id="input" />
+            <img src="imgs/acessibilidade.png" alt="toggleDarkMode" />
+        </label>
+
         <nav id="anos">
             <ul>
                 <li>
@@ -53,7 +59,7 @@
         </nav>
 
         <section class="semestres">
-            <h1>1º Semestre</h1>
+            <h2>1º Semestre</h2>
             <div class="grid">
                 <a href="/material.html">
                     <div>
@@ -98,7 +104,7 @@
         </section>
 
         <section class="semestres">
-            <h1>2º Semestre</h1>
+            <h2>2º Semestre</h2>
             <div class="grid">
                 <a href="#">
                     <div>
@@ -142,6 +148,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <div id="redes">
             <div>
