--- a/material.html
+++ b/material.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="/">
-            <img id="logo" src="imgs/Group 2.svg" alt="">
+            <img id="logo" src="imgs/Group 2.svg" alt="Logo do Instituto Federal">
         </a>
 
         <div id="menu">
