--- a/2022.html
+++ b/2022.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Materiais 2022</title>
     <link rel="stylesheet" href="css/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Kufam:ital,wght@0,400..900;1,400..900&display=swap');
@@ -57,7 +57,7 @@
             <div class="grid">
                 <a href="/curso-dos-idosos/material.html">
                     <div>
-                        <img src="imgs/drive.webp" alt="">
+                        <img src="imgs/drive.webp" alt="Logo  e título do Google Drive">
                         <div class="cardtext">
                             <h2>Título da aula</h2>
                             <p>04 de abril de 2024</p>
@@ -67,7 +67,7 @@
 
                 <a href="#">
                     <div>
-                        <img src="imgs/meet.webp" alt="">
+                        <img src="imgs/meet.webp" alt="Logo e título do Google Meet">
                         <div class="cardtext">
                             <h2>Título da aula</h2>
                             <p>12 de abril de 2024</p>
@@ -77,7 +77,7 @@
 
                 <a href="#">
                     <div>
-                        <img src="imgs/docs.webp" alt="">
+                        <img src="imgs/docs.webp" alt="Logo e título do Google Documentos">
                         <div class="cardtext">
                             <h2>Título da aula</h2>
                             <p>04 de abril de 2024</p>
@@ -87,7 +87,7 @@
 
                 <a href="#">
                     <div>
-                        <img src="imgs/gmail.webp" alt="">
+                        <img src="imgs/gmail.webp" alt="Logo e Título do Gmail">
                         <div class="cardtext">
                             <h2>Título da aula</h2>
                             <p>04 de abril de 2024</p>
