--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div></div>
             <div></div>
         </div>
+
         <div id="menulateral">
             <nav>
                 <ul>
@@ -36,6 +37,21 @@
                 </ul>
             </nav>
         </div>
+
+        <section id="desktop">
+            <div>
+                <nav id="menuDesktop">
+                    <ul>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Informações</a></li>
+                        <li><a href="#">Sobre</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+
+
     </header>
 
     <main>
@@ -44,108 +60,145 @@
             <img src="imgs/acessibilidade.png" alt="toggleDarkMode" />
         </label>
 
-        <nav id="anos">
-            <ul>
-                <li>
-                    <a class="ativo" href="/curso-dos-idosos/index.html">2024</a>
-                </li>
-                <li>
-                    <a href="/curso-dos-idosos/2023.html">2023</a>
-                </li>
-                <li>
-                    <a href="/curso-dos-idosos/2022.html">2022</a>
-                </li>
-            </ul>
-        </nav>
-
-        <section class="semestres">
-            <h2>1º Semestre</h2>
-            <div class="grid">
-                <a href="/material.html">
-                    <div>
-                        <img src="imgs/drive.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div>
-                        <img src="imgs/meet.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>12 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div>
-                        <img src="imgs/docs.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div>
-                        <img src="imgs/gmail.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+        <div id="desktop">
+            <div id="cabecalhoE">
+                <div id="cabecalho">
+                    <h1>CURSO TECNOLOGIA PARA IDOSOS</h1>
+                    <hr>
+                </div>
+                <div id="linha"></div>
             </div>
-        </section>
+        </div>
 
-        <section class="semestres">
-            <h2>2º Semestre</h2>
-            <div class="grid">
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto1.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+        <section id="padding">
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto2.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>12 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+            <nav id="anos">
+                <ul>
+                    <li>
+                        <a class="box" class="ativo" href="/curso-dos-idosos/index.html">2024</a>
+                    </li>
+                    <li>
+                        <a class="box" href="/curso-dos-idosos/2023.html">2023</a>
+                    </li>
+                    <li>
+                        <a class="box" href="/curso-dos-idosos/2022.html">2022</a>
+                    </li>
+                </ul>
+            </nav>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto3.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+            <section id="boxs">
+                <a href="index.html" class="box">Materiais: 2024</a>
+                <a href="2023.html" class="box">Materiais: 2023</a>
+                <a href="2022.html" class="box">Materiais: 2022</a>
+            </section>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto4.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
+            <section class="semestres">
+                <span class="materialAno">Materiais 2024</span>
+                <h5>1º SEMESTRE</h5>
+                <div class="grid">
+
+                    <div class="card">
+                        <a href="/material.html">
+                            <div>
+                                <img src="imgs/drive.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                </a>
-            </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/meet.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>12 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/docs.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/gmail.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="semestres">
+                <h5>2º SEMESTRE</h5>
+                <div class="grid">
+                    <div class="card">
+                    <a href="#">
+                        <div>
+                            <img src="imgs/foto1.webp" alt="">
+                            <div class="cardtext">
+                                <h2>Título da aula</h2>
+                                <p>04 de abril de 2024</p>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+
+                    <div class="card">
+                    <a href="#">
+                        <div>
+                            <img src="imgs/foto2.webp" alt="">
+                            <div class="cardtext">
+                                <h2>Título da aula</h2>
+                                <p>12 de abril de 2024</p>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+
+                    <div class="card">
+                    <a href="#">
+                        <div>
+                            <img src="imgs/foto3.webp" alt="">
+                            <div class="cardtext">
+                                <h2>Título da aula</h2>
+                                <p>04 de abril de 2024</p>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+
+                    <div class="card">
+                    <a href="#">
+                        <div>
+                            <img src="imgs/foto4.webp" alt="">
+                            <div class="cardtext">
+                                <h2>Título da aula</h2>
+                                <p>04 de abril de 2024</p>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 
@@ -163,6 +216,10 @@
         </div>
 
         <div id="content">
+
+            <div id="logoFooter">
+                <img  id="footerLogo" src="imgs/Group 2.svg" alt="">
+            </div>
             <div id="contato">
                 <h3>Contatos:</h3>
                 <a href="http://gru.ifsp.edu.br/">Site: http://gru.ifsp.edu.br/</a>
@@ -174,10 +231,9 @@
                 <h3>Localização:</h3>
                 <p>Endereço: Av. Salgado Filho, 3501 - Centro, Guarulhos - SP, 07115-000</p>
             </div>
-
-            <h4>© meninas na programação - IFSP Gru</h4>
-
         </div>
+        <h4>© meninas na programação - IFSP Gru</h4>
+
     </footer>
 
 </body>
