--- a/2023.html
+++ b/2023.html
@@ -35,129 +35,188 @@
                 </ul>
             </nav>
         </div>
+
+        <section id="desktop">
+            <div>
+                <nav id="menuDesktop">
+                    <ul>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Informações</a></li>
+                        <li><a href="#">Sobre</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
     </header>
 
     <main>
-        <nav id="anos">
-            <ul>
-                <li>
-                    <a href="/curso-dos-idosos/index.html">2024</a>
-                </li>
-                <li>
-                    <a  class="ativo" href="/curso-dos-idosos/2023.html">2023</a>
-                </li>
-                <li>
-                    <a href="/curso-dos-idosos/2022.html">2022</a>
-                </li>
-            </ul>
-        </nav>
-
-        <section class="semestres">
-            <h2>1º Semestre</h2>
-            <div class="grid">
-                <a href="/curso-dos-idosos/introducao2023.html">
-                    <div>
-                        <img src="imgs/introducao.png" alt="Introdução ao curso">
-                        <div class="cardtext">
-                            <h2>Introdução ao curso</h2>
-                            <p>14 de março de 2023</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="/curso-dos-idosos/gmail2023.html">
-                    <div>
-                        <img src="imgs/gmail.webp" alt="Logo e título do Gmail">
-                        <div class="cardtext">
-                            <h2>Gmail</h2>
-                            <p>21 de março de 2023</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="/curso-dos-idosos/docgoogle2023.html">
-                    <div>
-                        <img src="imgs/docs.webp" alt="Logo e título do Documentos Google">
-                        <div class="cardtext">
-                            <h2>Documentos Google</h2>
-                            <p>28 de março de 2023</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="/curso-dos-idosos/livrodereceita2023.html">
-                    <div>
-                        <img src="imgs/receitas.png" alt="Livro de receitas.">
-                        <div class="cardtext">
-                            <h2>Criando o seu livro de receitas</h2>
-                            <p>11 de abril de 2023</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="/curso-dos-idosos/aulafotografia2023.html">
-                    <div>
-                        <img src="imgs/fotografia.webp" alt="Desenho de uma câmera fotográfica.">
-                        <div class="cardtext">
-                            <h2>Aula de fotografias</h2>
-                            <p>18 de abril de 2023</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="/curso-dos-idosos/googledrive2023.html">
-                    <div>
-                        <img src="imgs/drive.webp" alt="Logo e título do Google Drive">
-                        <div class="cardtext">
-                            <h2>Google Drive</h2>
-                            <p>25 de abril de 2023</p>
-                        </div>
-                    </div>
-                </a>
+        <div id="desktop">
+            <div id="cabecalhoE">
+                <div id="cabecalho">
+                    <h1>CURSO TECNOLOGIA PARA IDOSOS</h1>
+                    <hr>
+                </div>
+                <div id="linha"></div>
             </div>
-        </section>
+        </div>
 
-        <section class="semestres">
-            <h2>2º Semestre</h2>
-            <div class="grid">
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto1.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+        <section id="padding">
+            <nav id="anos">
+                <ul>
+                    <li>
+                        <a href="/curso-dos-idosos/index.html">2024</a>
+                    </li>
+                    <li>
+                        <a class="ativo" href="/curso-dos-idosos/2023.html">2023</a>
+                    </li>
+                    <li>
+                        <a href="/curso-dos-idosos/2022.html">2022</a>
+                    </li>
+                </ul>
+            </nav>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto2.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>12 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+            <section id="boxs">
+                <a href="/curso-dos-idosos/index.html" class="box">Materiais: 2024</a>
+                <a href="/curso-dos-idosos/2023.html" class="ativo" class="box">Materiais: 2023</a>
+                <a href="/curso-dos-idosos/2022.html" class="box">Materiais: 2022</a>
+            </section>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto3.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/drive.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
+            <section class="semestres">
+                <span class="materialAno">Materiais 2024</span>
+                <h5>1º SEMESTRE</h5>
+
+                <div class="grid">
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/introducao2023.html">
+                            <div>
+                                <img src="imgs/introducao.png" alt="Introdução ao curso">
+                                <div class="cardtext">
+                                    <h2>Introdução ao curso</h2>
+                                    <p>14 de março de 2023</p>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                </a>
-            </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/gmail2023.html">
+                            <div>
+                                <img src="imgs/gmail.webp" alt="Logo e título do Gmail">
+                                <div class="cardtext">
+                                    <h2>Gmail</h2>
+                                    <p>21 de março de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/docgoogle2023.html">
+                            <div>
+                                <img src="imgs/docs.webp" alt="Logo e título do Documentos Google">
+                                <div class="cardtext">
+                                    <h2>Documentos Google</h2>
+                                    <p>28 de março de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/livrodereceita2023.html">
+                            <div>
+                                <img src="imgs/receitas.png" alt="Livro de receitas.">
+                                <div class="cardtext">
+                                    <h2>Criando o seu livro de receitas</h2>
+                                    <p>11 de abril de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/aulafotografia2023.html">
+                            <div>
+                                <img src="imgs/fotografia.webp" alt="Desenho de uma câmera fotográfica.">
+                                <div class="cardtext">
+                                    <h2>Aula de fotografias</h2>
+                                    <p>18 de abril de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/googledrive2023.html">
+                            <div>
+                                <img src="imgs/drive.webp" alt="Logo e título do Google Drive">
+                                <div class="cardtext">
+                                    <h2>Google Drive</h2>
+                                    <p>25 de abril de 2023</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="semestres">
+                <h5>2º SEMESTRE</h5>
+
+                <div class="grid">
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/foto1.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/foto2.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>12 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/foto3.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/drive.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
     <footer>
@@ -174,6 +233,10 @@
         </div>
 
         <div id="content">
+
+            <div id="logoFooter">
+                <img id="footerLogo" src="imgs/Group 2.svg" alt="">
+            </div>
             <div id="contato">
                 <h3>Contatos:</h3>
                 <a href="http://gru.ifsp.edu.br/">Site: http://gru.ifsp.edu.br/</a>
@@ -185,8 +248,9 @@
                 <h3>Localização:</h3>
                 <p>Endereço: Av. Salgado Filho, 3501 - Centro, Guarulhos - SP, 07115-000</p>
             </div>
+        </div>
 
-            <h4>© meninas na programação - IFSP Gru</h4>
+        <h4>© meninas na programação - IFSP Gru</h4>
 
         </div>
     </footer>
