--- a/2022.html
+++ b/2022.html
@@ -35,111 +35,163 @@
                 </ul>
             </nav>
         </div>
+
+        <section id="desktop">
+            <div>
+                <nav id="menuDesktop">
+                    <ul>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Informações</a></li>
+                        <li><a href="#">Sobre</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
     </header>
 
     <main>
-        <nav id="anos">
-            <ul>
-                <li>
-                    <a href="/curso-dos-idosos/index.html">2024</a>
-                </li>
-                <li>
-                    <a href="/curso-dos-idosos/2023.html">2023</a>
-                </li>
-                <li>
-                    <a class="ativo" href="/curso-dos-idosos/2022.html">2022</a>
-                </li>
-            </ul>
-        </nav>
 
-        <section class="semestres">
-            <h1>1º Semestre</h1>
-            <div class="grid">
-                <a href="/curso-dos-idosos/material.html">
-                    <div>
-                        <img src="imgs/drive.webp" alt="Logo  e título do Google Drive">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div>
-                        <img src="imgs/meet.webp" alt="Logo e título do Google Meet">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>12 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div>
-                        <img src="imgs/docs.webp" alt="Logo e título do Google Documentos">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div>
-                        <img src="imgs/gmail.webp" alt="Logo e Título do Gmail">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+        <div id="desktop">
+            <div id="cabecalhoE">
+                <div id="cabecalho">
+                    <h1>CURSO TECNOLOGIA PARA IDOSOS</h1>
+                    <hr>
+                </div>
+                <div id="linha"></div>
             </div>
-        </section>
+        </div>
 
-        <section class="semestres">
-            <h1>2º Semestre</h1>
-            <div class="grid">
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto1.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+        <section id="padding">
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto2.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>12 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+            <nav id="anos">
+                <ul>
+                    <li>
+                        <a href="/curso-dos-idosos/index.html">2024</a>
+                    </li>
+                    <li>
+                        <a href="/curso-dos-idosos/2023.html">2023</a>
+                    </li>
+                    <li>
+                        <a class="ativo" href="/curso-dos-idosos/2022.html">2022</a>
+                    </li>
+                </ul>
+            </nav>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto3.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
-                    </div>
-                </a>
+            <section id="boxs">
+                <a href="/curso-dos-idosos/index.html" class="box">Materiais: 2024</a>
+                <a href="/curso-dos-idosos/2023.html" class="box">Materiais: 2023</a>
+                <a href="/curso-dos-idosos/2022.html" class="ativo" class="box">Materiais: 2022</a>
+            </section>
 
-                <a href="#">
-                    <div>
-                        <img src="imgs/foto4.webp" alt="">
-                        <div class="cardtext">
-                            <h2>Título da aula</h2>
-                            <p>04 de abril de 2024</p>
-                        </div>
+            <section class="semestres">
+                <span class="materialAno">Materiais 2024</span>
+                <h5>1º SEMESTRE</h5>
+                <div class="grid">
+
+                    <div class="card">
+                        <a href="/curso-dos-idosos/material.html">
+                            <div>
+                                <img src="imgs/drive.webp" alt="Logo  e título do Google Drive">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                </a>
-            </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/meet.webp" alt="Logo e título do Google Meet">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>12 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/docs.webp" alt="Logo e título do Google Documentos">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/gmail.webp" alt="Logo e Título do Gmail">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="semestres">
+                <h5>2º SEMESTRE</h5>
+                <div class="grid">
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/foto1.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/foto2.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>12 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/foto3.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <div>
+                                <img src="imgs/foto4.webp" alt="">
+                                <div class="cardtext">
+                                    <h2>Título da aula</h2>
+                                    <p>04 de abril de 2024</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
     <footer>
@@ -156,6 +208,10 @@
         </div>
 
         <div id="content">
+
+            <div id="logoFooter">
+                <img id="footerLogo" src="imgs/Group 2.svg" alt="">
+            </div>
             <div id="contato">
                 <h3>Contatos:</h3>
                 <a href="http://gru.ifsp.edu.br/">Site: http://gru.ifsp.edu.br/</a>
@@ -167,9 +223,6 @@
                 <h3>Localização:</h3>
                 <p>Endereço: Av. Salgado Filho, 3501 - Centro, Guarulhos - SP, 07115-000</p>
             </div>
-
-            <h4>© meninas na programação - IFSP Gru</h4>
-
         </div>
     </footer>
 
