--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             </nav>
 
             <section id="boxs">
-                <a href="index.html" class="box">Materiais: 2024</a>
-                <a href="2023.html" class="box">Materiais: 2023</a>
-                <a href="2022.html" class="box">Materiais: 2022</a>
+                <a href="/curso-dos-idosos/index.html" class="ativo" class="box">Materiais: 2024</a>
+                <a href="/curso-dos-idosos/2023.html" class="box">Materiais: 2023</a>
+                <a href="/curso-dos-idosos/2022.html" class="box">Materiais: 2022</a>
             </section>
 
             <section class="semestres">
@@ -98,7 +98,7 @@
                 <div class="grid">
 
                     <div class="card">
-                        <a href="/material.html">
+                        <a href="/curso-dos-idosos/material.html">
                             <div>
                                 <img src="imgs/drive.webp" alt="">
                                 <div class="cardtext">
