--- a/material.html
+++ b/material.html
@@ -9,7 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Kufam:ital,wght@0,400..900;1,400..900&display=swap');
     </style>
-     <script src="js/menu.js" defer></script>
+    <script src="js/menu.js" defer></script>
 </head>
 
 <body>
@@ -23,6 +23,7 @@
             <div></div>
             <div></div>
         </div>
+
         <div id="menulateral">
             <nav>
                 <ul>
@@ -35,13 +36,31 @@
                 </ul>
             </nav>
         </div>
+        <section id="desktop">
+            <div>
+                <nav id="menuDesktop">
+                    <ul>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Informações</a></li>
+                        <li><a href="#">Sobre</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+
+
     </header>
 
     <main>
         <h2 id="materialH2">Material: xx/xx/xxxx</h2>
 
         <section id="material">
-            <h5>MATERIAL</h5>
+            <iframe
+            src="https://docs.google.com/viewer?srcid=1CnscFWDvS03kO2TnzKoqHQGu83Psx877&pid=explorer&efh=false&a=v&chrome=false&embedded=true"
+            width="1200px"
+            height="500px"
+        ></iframe>
         </section>
 
         <section id="materiais">
@@ -106,6 +125,10 @@
         </div>
 
         <div id="content">
+
+            <div id="logoFooter">
+                <img id="footerLogo" src="imgs/Group 2.svg" alt="">
+            </div>
             <div id="contato">
                 <h3>Contatos:</h3>
                 <a href="http://gru.ifsp.edu.br/">Site: http://gru.ifsp.edu.br/</a>
@@ -117,8 +140,9 @@
                 <h3>Localização:</h3>
                 <p>Endereço: Av. Salgado Filho, 3501 - Centro, Guarulhos - SP, 07115-000</p>
             </div>
+        </div>
 
-            <h4>© meninas na programação - IFSP Gru</h4>
+        <h4>© meninas na programação - IFSP Gru</h4>
 
         </div>
     </footer>
