--- a/2023.html
+++ b/2023.html
@@ -90,7 +90,7 @@
                 <div class="grid">
 
                     <div class="card">
-                        <a href="/curso-dos-idosos/introducao2023.html">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1pyAdqvpGrgO2vS9U1a-JkkNezXQODt1j/preview">
                             <div>
                                 <img src="imgs/introducao.png" alt="Introdução ao curso">
                                 <div class="cardtext">
@@ -102,7 +102,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="/curso-dos-idosos/gmail2023.html">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1S7-VIOrkfacB52oQ_krunEFx43DZbkBg/preview">
                             <div>
                                 <img src="imgs/gmail.webp" alt="Logo e título do Gmail">
                                 <div class="cardtext">
@@ -114,7 +114,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="/curso-dos-idosos/docgoogle2023.html">
+                        <a href="/curso-dos-idosos/material.html?pdf=">
                             <div>
                                 <img src="imgs/docs.webp" alt="Logo e título do Documentos Google">
                                 <div class="cardtext">
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="/curso-dos-idosos/livrodereceita2023.html">
+                        <a href="/curso-dos-idosos/material.html?pdf=https://drive.google.com/file/d/1qCD7tuF-tKWOuDAbS_vf_jSzvQyxh0Pm/preview">
                             <div>
                                 <img src="imgs/receitas.png" alt="Livro de receitas.">
                                 <div class="cardtext">
