--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"> 
 
 <head>
     <meta charset="UTF-8">
@@ -55,6 +55,9 @@
     </header>
 
     <main>
+
+        <button id="changeThemeButton" >Modo Escuro</button>
+
         <label for="input" id="acessibilidade">
             <input type="checkbox" name="input" id="input" />
             <img src="imgs/acessibilidade.png" alt="toggleDarkMode" />
